--- a/components/qblocks/toggle-group/index.wxml
+++ b/components/qblocks/toggle-group/index.wxml
@@ -1,2 +1,5 @@
 <!--components/qblocks/togglebutton-group/index.wxml-->
-<text>components/qblocks/togglebutton-group/index.wxml</text>
+<!-- <view class="{{ utils.bem('toggle-group', [direction]) }}"> -->
+<view class="qb-toggle-group" value="{{ toggle }}" bind:change="onChange">
+  <slot></slot>
+</view>
