--- a/components/qblocks/toggle-group/index.wxss
+++ b/components/qblocks/toggle-group/index.wxss
@@ -1,1 +1,9 @@
 /* components/qblocks/togglebutton-group/index.wxss */
+.qb-toggle-group {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 16rpx 0;
+}
