--- a/components/qblocks/toggle/index.wxml
+++ b/components/qblocks/toggle/index.wxml
@@ -1,7 +1,5 @@
 <!--components/qblocks/togglebutton/index.wxml-->
-<view class="qb-toggle">
-  <van-icon class="qb-toggle__icon" name="setting-o" size="48rpx" color="#fff" />
-  <view class="qb-toggle__text">
-    直吹风
-  </view>
+<view class="qb-toggle {{selectedClass}}" bind:tap="onTap">
+    <!-- <van-icon class="qb-toggle__icon" name="info-o" size="32rpx" color="#fff" /> -->
+    <text class="qb-toggle__text" size="32rpx">直吹风</text>
 </view>
