--- a/pages/panel/index.wxml
+++ b/pages/panel/index.wxml
@@ -4,7 +4,16 @@
   <view slot="content" class="panel1__content">
       <qb-icontoggle text="模式1"/>
       <qb-icontoggle text="模式2"/>
-      <qb-icontoggle text="模式2"/>
+      <qb-icontoggle text="模式3"/>
+      <qb-icontoggle text="模式4"/>
+  </view>
+</qb-panel>
+
+
+<qb-panel title="模式">
+  <view slot="content" class="panel1__content">
+      <qb-toggle text="模式1"/>
+      <qb-toggle text="模式2"/>
       <qb-toggle text="模式3"/>
   </view>
 </qb-panel>
